--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 body {
     font-family: "Poppins";
-    background-color: rgb(230, 230, 174);
+    background-color: rgba(128, 128, 128, 0.234);
 }
 
 /* =======Header Section===== */
@@ -58,9 +58,97 @@ nav {
     border-radius: 8px;
     font-size: 1rem;
     outline: none;
-    background-color: rgb(203, 203, 119);
+    background-color: white;
     color: black
 }
+
+/* =========== Featured Prodction */
+#featured-product {
+    margin: 2rem 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.heading {
+    margin: 10px 0;
+    font-size: 2rem;
+    margin-bottom: 30px;
+
+}
+
+#products {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+.product-item {
+    margin: 0 10px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.349);
+
+    transition-duration: 800ms;
+}
+
+.product-item:hover {
+    transform: scale(1.1);
+    transition-duration: 800ms;
+}
+
+.product-image {
+    border-radius: 10px 10px 0 0;
+    width: 15rem;
+    height: 10rem;
+    overflow: hidden;
+}
+
+.product-details {
+    margin: 5px 0;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.product-details>div:nth-child(1) {
+    font-size: 1.2rem;
+}
+
+.product-details>div:nth-child(2) {
+    font-size: 0.9rem;
+    color: gray;
+
+}
+
+.product-details>button {
+    margin-top: 10px;
+    border: 0;
+    padding: 8px 6px;
+    display: flex;
+    background-color: black;
+    border-radius: 10px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: white;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.product-details>button:hover {
+    background-color: white;
+    color: black;
+}
+
 
 .center {
     display: flex;
