Create hero section

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ nav {
 
 .header-item:hover {
     text-decoration: underline;
+    color: rgb(37, 179, 86);
 
 }
 
@@ -62,9 +63,102 @@ nav {
     color: black
 }
 
+/* ==============Hero Section================ */
+
+#hero {
+    margin: 0 14rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+#hero>div {
+    margin: 0 1rem;
+}
+
+#hero>div:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+#hero>div:nth-child(2) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.highlight {
+    color: rgb(37, 179, 86);
+}
+
+#hero-one-liner {
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: 4rem;
+}
+
+#hero-one-liner~div {
+
+    color: gray;
+}
+
+#hero-one-liner~button {
+    margin-top: 10px;
+    width: 40%;
+    padding: 10px 16px;
+    border: 0;
+    border-radius: 0.8rem;
+    background-color: #f7c82c;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+#hero-image {
+    width: 80%;
+}
+
+/* ================Feature of Products=========== */
+#features {
+    margin: 4rem 14rem;
+    padding: 2.5rem 0;
+    margin-bottom: 6rem;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: inset 0px 0px 40px 20px #f0f0f0;
+
+}
+
+#features>div {
+    font-size: 1.2rem;
+    transition-duration: 800ms;
+}
+
+#feature>div:hover {
+    letter-spacing: 2px;
+    transform: scale(1.1);
+    transition-duration: 800ms;
+}
+
+
+#features>div>div:nth-child(1) {
+    color: rgb(37, 179, 86);
+    font-size: 1.4rem;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+
+#features>div>div:nth-child(2) {
+    color: gray;
+}
+
 /* =========== Featured Prodction */
 #featured-product {
-    margin: 2rem 0;
+    margin: 2rem 4rem 0 0;
 
     display: flex;
     flex-direction: column;
@@ -77,7 +171,6 @@ nav {
     margin: 10px 0;
     font-size: 2.3rem;
     margin-bottom: 30px;
-
 }
 
 #products {
@@ -85,6 +178,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    margin-top: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 .product-item {
@@ -102,8 +198,8 @@ nav {
 
 .product-image {
     border-radius: 10px 10px 0 0;
-    width: 15rem;
-    height: 10rem;
+    width: 20rem;
+    height: 15rem;
     overflow: hidden;
 }
 
@@ -115,27 +211,37 @@ nav {
 
 }
 
+.product-details>div {
+    margin-top: 3px;
+}
+
 .product-details>div:nth-child(1) {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 .product-details>div:nth-child(2) {
-    font-size: 0.9rem;
+    font-size: 1rem;
     color: gray;
 
+}
+
+.product-details>div:nth-child(3) {
+    color: rgb(37, 179, 86);
+    font-size: 1.1rem;
+    font-weight: 500;
 }
 
 .product-details>button {
     margin-top: 10px;
     border: 0;
-    padding: 8px 6px;
-    display: flex;
-    background-color: black;
-    border-radius: 10px;
+    padding: 14px;
+
+    background-color: rgb(37, 179, 86);
+    border-radius: 8px;
     font-weight: 600;
     letter-spacing: 1px;
     color: white;
-    font-size: 1rem;
+    font-size: 1.2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,10 +249,17 @@ nav {
 }
 
 .product-details>button:hover {
-    background-color: white;
-    color: black;
+    background-color: rgb(16, 131, 56);
 }
 
+/* ============Promotion Section ======= */
+#promotions {
+    margin: 3rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 /* ============Footer Section=========== */
 
