--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ nav {
     color: gray;
 }
 
-/* =========== Featured Prodction */
+/* =========== Featured Products========= */
 #featured-product {
     margin: 2rem 4rem 0 0;
 
@@ -259,6 +259,51 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+/* ============Newsletter Section========= */
+#newsletter {
+    margin: 5rem 18rem;
+    height: 22vh;
+    background-color: rgba(9, 195, 93);
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white
+}
+
+#newsletter>h1 {
+    font-size: 2.2rem;
+    letter-spacing: 1.5px;
+    margin: 0 1rem;
+    margin-bottom: 1.5rem;
+}
+
+#newsletter>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#newsletter>div>input {
+    border: 0;
+    outline: 0;
+    padding: 1rem 2rem;
+    border-radius: 10px 0px 0px 10px;
+
+    width: 30rem;
+    font-size: 1rem;
+}
+
+#newsletter>div>button {
+    padding: 1rem 2rem;
+    background-color: rgba(0, 101, 69, 255);
+    border: 0;
+    color: white;
+    font-size: 1rem;
+    border-radius: 0 10px 10px 0;
 }
 
 /* ============Footer Section=========== */
