--- a/css/style.home.css
+++ b/css/style.home.css
@@ -1,4 +1,3 @@
-
 /* =======Header Section===== */
 
 .red {
@@ -158,7 +157,32 @@ nav {
     margin-bottom: 30px;
 }
 
-#products {
+#featured-product>div:nth-child(1)>div {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#featured-product>div:nth-child(1)>div>button {
+    margin-bottom: 2rem;
+    border: 0;
+    padding: 2px 4px;
+    font-size: 1.1rem;
+    background-color: transparent;
+
+    color: rgb(62, 62, 62);
+    cursor: pointer;
+
+}
+
+#featured-product>div:nth-child(1)>div>button:hover {
+    color: rgb(37, 179, 86);
+    text-decoration: underline;
+
+}
+
+#fruits-products, #vegetables-products{
     width: 80%;
     display: flex;
     justify-content: space-between;
